fixed issue with main by adding overflow-y scroll style

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@ a:hover {
   display: flex;
   flex-direction: row;
   flex: 1;
+  overflow-y: scroll;
 }
 
 .console {
